# jsonpath11

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  debug.py  pyproject.toml  requirements-dev.txt
.github/workflows/: debug.yaml  tests.yaml
include/libjsonpath/: node.hpp  path.hpp
scripts/: benchmark.py
src/: jsonpath24.cpp
src/jsonpath24/: __init__.py  __init__.pyi  _env.py  _nothing.py  _path.py  filter_function.py
src/jsonpath24/functions/: count.py  length.py  match.py  search.py  value.py
src/libjsonpath/: node.cpp  path.cpp
tests/: test_compliance.py  test_errors.py  test_lex.py  test_parse.py  test_singular_query.py
